// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Category: Describes categories for products including name and description.
Customer: Stores customer details including contact information and credit data.
Inventory: Keeps track of product inventory levels per warehouse.
Product: Contains product information including name, description, and price.
Order: Represents customer orders including total amount and shipment details.
OrderItem: Links products to orders with quantity and calculated item amount.
Payment: Details of payments made by customers for their orders.
ProductCategory: Junction table for linking products to categories.
Shipment: Contains shipment details for orders including warehouse handling.
Warehouse: Stores information about different warehouses.
Supplier: Holds supplier information including contact details.
SupplierProduct: Junction table mapping suppliers to products they supply.
'''
}

Table Category {
    id INTEGER [primary key]
    name VARCHAR 
    description TEXT 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    phone VARCHAR 
    credit_limit FLOAT 
    balance FLOAT 
    }

Table Inventory {
    id INTEGER [primary key]
    product_id INTEGER 
    quantity INTEGER 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    description TEXT 
    price FLOAT 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    date_ordered DATETIME 
    date_shipped DATETIME 
    amount_total FLOAT 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    unit_price FLOAT 
    amount FLOAT 
    }

Table Payment {
    id INTEGER [primary key]
    order_id INTEGER 
    amount FLOAT 
    date_paid DATETIME 
    }

Table ProductCategory {
    id INTEGER [primary key]
    product_id INTEGER 
    category_id INTEGER 
    }

Table Shipment {
    id INTEGER [primary key]
    order_id INTEGER 
    warehouse_id INTEGER 
    date_shipped DATETIME 
    }

Table Warehouse {
    id INTEGER [primary key]
    location VARCHAR 
    capacity INTEGER 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    phone VARCHAR 
    }

Table SupplierProduct {
    id INTEGER [primary key]
    supplier_id INTEGER 
    product_id INTEGER 
    }



// Relationships
    Ref: Inventory.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: OrderItem.(product_id) < Product.(id)
    Ref: Payment.(order_id) < Order.(id)
    Ref: ProductCategory.(category_id) < Category.(id)
    Ref: ProductCategory.(product_id) < Product.(id)
    Ref: Shipment.(order_id) < Order.(id)
    Ref: Shipment.(warehouse_id) < Warehouse.(id)
    Ref: SupplierProduct.(product_id) < Product.(id)
    Ref: SupplierProduct.(supplier_id) < Supplier.(id)
